Initial picocli implementation