@@ -10,7 +10,7 @@ import org.junit.jupiter.api.parallel.Execution;
 import org.junit.jupiter.api.parallel.ExecutionMode;
 
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
@@ -20,7 +20,7 @@ public class UnitPlacerTest {
     @Test
     public void maxUnitsPlacedTest() {
         Group group = new Group("TestGroup", new ArrayList<>());
-        Army army = new Army("Test", Collections.singletonList(group));
+        Army army = new Army("Test", List.of(group));
         UnitPlacer unitPlacer = new UnitPlacer(0L);
         unitPlacer.placeUnits(new BooleanMask(256, 0L, new SymmetrySettings(Symmetry.POINT2)).invert(), new String[]{"test"}, army, group, 0f);
         assertTrue(army.getNumUnits() <= UnitPlacer.MAX_UNIT_COUNT);
